@@ -1,3 +1,8 @@
+2007-01-20  Aaron Stone  <aaron@serendipity.cx>
+
+	* serverparent.c:
+	Unrecognized options case the daemons to bail out with an error.
+
 2007-01-20  Paul J Stevens <paul@nfg.nl>
 
 	* debian/control, debian/dbmail-dev.install, debian/dbmail-ldap.config, 
